fix(styles): fix contrast issues for dark mode (#65)
* improvement: improve the styling of links

* refactor: remove anchor component and style anchors

* style: include additional fornt weight for bold text

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -11,8 +11,9 @@
 
 // https://tympanus.net/Development/InlineAnchorStyles/
 
-a[href*='http'],
-a[href*='#'] {
+// material components use a class of 'mat-...' for whatever
+// component they use. Style all components NOT material ones
+a:not([class*='mat-']) {
   --anchor-link: var(--anchor-link-http-light);
   outline: none;
   text-decoration: none;
@@ -31,8 +32,7 @@ a[href*='#'] {
 }
 
 .dark-theme {
-  a[href*='http'],
-  a[href*='#'] {
+  a:not([class*='mat-']) {
     --anchor-link: var(--anchor-link-http-dark);
   }
 }
